--- a/CA - IWC/package.json
+++ b/CA - IWC/package.json
@@ -2,13 +2,14 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --clean --all --require ts-node/register --require reflect-metadata/Reflect --extension .ts -- mocha --timeout 5000 **/*.test.ts",
+    "coverage": "nyc report --reporter=html --clean --all --require ts-node/register --require reflect-metadata/Reflect --extension .ts -- mocha --timeout 5000 **/*.test.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@types/body-parser": "1.17.0",
     "@types/express": "4.16.0",
@@ -22,5 +23,16 @@
     "pg": "7.6.0",
     "reflect-metadata": "0.1.12",
     "typeorm": "0.2.8"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
+    "@types/supertest": "^2.0.7",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
+    "supertest": "^3.4.1",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.4"
   }
 }
