--- a/CA - IWC/package.json
+++ b/CA - IWC/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.3.0",
     "@types/node": "10.12.0",
     "body-parser": "1.18.3",
+    "dotenv": "^6.2.0",
     "express": "4.16.4",
     "joi": "^14.0.6",
     "jsonwebtoken": "^8.4.0",
